<resources>
    <string name="app_name">Photo Album</string>
    <string name="photo_number">Photo Number</string>
    <string name="album_number">Album Number</string>
    <string name="get_photos">Find</string>
    <string-array name="photos_type_array">
        <item>A Photo</item>
        <item>An Album</item>
        <item>All Photos</item>
    </string-array>
    <string-array name="layout_type_array">
        <item>One Column</item>
        <item>Two Columns</item>
    </string-array>
    <string name="event_title">Events</string>
    <string name="reminder_title">Reminders</string>
    <string name="no_events">You have no events</string>
    <string name="no_reminders">You have no reminders</string>
    <string-array name="calendar_type_array">
        <item>Event</item>
        <item>Reminder</item>
    </string-array>
    <string name="title">Title: </string>
    <string name="description">Description: </string>
    <string name="location">Location: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="frequency">Frequency: </string>
    <string-array name="event_frequency_array">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="reminder_frequency_array">
        <item>Once</item>
        <item>Every half hour</item>
        <item>Every hour</item>
        <item>Every 3 hours</item>
        <item>Every 12 hours</item>
        <item>Daily</item>
    </string-array>
    <string name="add_event">Add Event</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Channel to send app notifications through</string>
    <string name="add_button">add_button</string>
    <string name="right_date_button">right_date_button</string>
    <string name="left_date_button">left_date_button</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="to_register">New user? Register Here</string>
    <string name="to_login">Already registered? Login Here</string>
    <string name="user_file_key">com.example.practiceapplication.USER_FILE_KEY</string>
    <string name="user_id">user_id</string>
    <string name="log_out">Log out</string>
</resources>